; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_env-util.c_strv_env_unset.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_env-util.c_strv_env_unset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @strv_env_unset(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8**, i8*** %4, align 8
  %9 = icmp ne i8** %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i8** null, i8*** %3, align 8
  br label %40

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @assert(i8* %12)
  %14 = load i8**, i8*** %4, align 8
  store i8** %14, i8*** %7, align 8
  store i8** %14, i8*** %6, align 8
  br label %15

15:                                               ; preds = %34, %11
  %16 = load i8**, i8*** %6, align 8
  %17 = load i8*, i8** %16, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %37

19:                                               ; preds = %15
  %20 = load i8**, i8*** %6, align 8
  %21 = load i8*, i8** %20, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = call i64 @env_match(i8* %21, i8* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i8**, i8*** %6, align 8
  %27 = load i8*, i8** %26, align 8
  %28 = call i32 @free(i8* %27)
  br label %34

29:                                               ; preds = %19
  %30 = load i8**, i8*** %6, align 8
  %31 = load i8*, i8** %30, align 8
  %32 = load i8**, i8*** %7, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i32 1
  store i8** %33, i8*** %7, align 8
  store i8* %31, i8** %32, align 8
  br label %34

34:                                               ; preds = %29, %25
  %35 = load i8**, i8*** %6, align 8
  %36 = getelementptr inbounds i8*, i8** %35, i32 1
  store i8** %36, i8*** %6, align 8
  br label %15

37:                                               ; preds = %15
  %38 = load i8**, i8*** %7, align 8
  store i8* null, i8** %38, align 8
  %39 = load i8**, i8*** %4, align 8
  store i8** %39, i8*** %3, align 8
  br label %40

40:                                               ; preds = %37, %10
  %41 = load i8**, i8*** %3, align 8
  ret i8** %41
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i64 @env_match(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
